# flash

./: .gitignore  Dockerfile  Procfile  README.md  env.yml  environment.yml  pyproject.toml  requirements.txt  sweep.yaml
flash/: README.md  app.py  first-test-elm.md  main.py  requirements.txt  test_multipage.py
flash/agent/: agent.py  async_agent.py  lambda_agent.py
flash/commons/: learning_material.py  models.py  page.py  prompt.py  utils.py
flash/prompts/: small-runnable-example.txt
flash/text-examples/: README.md
flash/text-examples/elm/: README.md  elm-chatgpt.md  elm.md
flash/text-examples/experiments/: apache_superset_test.md  apachekafka_test.md  dagster.md  elm_test.md  first-test-rust.md  flask.md  flask_test.md  kubernetes_test.md  tomcat.md  velox_test.md
flash/text-examples/git/: README.md  git.md
mvp/: Dockerfile  README.md  app.py  mvp.ipynb  utils.py
mvp/examples/docker/: docker.md
mvp/examples/git/: git-chatgpt.md
mvp/prompts/: core-apis.txt  core-concepts.txt  onboarding.txt  real-life-examples.txt  small-runnable-example.txt  with-and-without.txt
mvp/src/: agent.py  env.yml  main.py  utils.py
mvp/src/agent/: agent.py  utils.py
mvp/src/commons/: learning_material.py
mvp/tests/: test_mvp.ipynb
mvp/text-examples/docker/: README.md  docker-chatgpt.md  docker.md
mvp/text-examples/git/: git.md
