[tool.poetry]
name = "flash"
version = "0.1.0"
description = "The proper way for software engineers to learn new technologies"
authors = ["Tommy Xu <tommysteryy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
taipy = "^3.0.0"
boto3 = "^1.34.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
